fix single text appear word wrap bug

--- a/css/jquery.dialogbox.css
+++ b/css/jquery.dialogbox.css
@@ -59,6 +59,7 @@
 	padding: 20px;
 	line-height: 24px;
 	margin: 0;
+	white-space: nowrap;
 }
 .dialog-btn{
 	height:34px;
